# critical_questions_generation

./: .gitignore  README.md  elbaff_notebook copy.ipynb  elbaff_notebook.ipynb  eval.ipynb  eval_notebook copy.ipynb  eval_notebook.ipynb  notebook.ipynb  requirements.txt  run_experiments_notebook.ipynb  test_notebook.ipynb
data_splits/: sample.json  sample_copy.json  test.json  validation.json
eval_scripts/: evaluation.py
experiments/: base_agent.py  evaluation.py  social_agents.py  utils.py  validation_agents.py
my_models/: graph_tools.py  objects.py  utils.py
opitz_models/: Agent.py  GeneratorAgent.py  LLM.py  evaluate.py  main.py  readme.md  utils.py
opitz_models_2/: QuestionScorer.py  main.py  readme.md
output/: 12399_log.txt  12399_output._eval_similarity_06.json  12399_output.json  14792_log.txt  14792_output.json  23331_log.txt  23331_output.json  24587_log.txt  34880_log.txt  34880_output._eval_similarity_06.json  34880_output.json  35999_log.txt  37493_log.txt  41027_output._eval_similarity_06.json  41027_output.json  47277_log.txt  49017_log.txt  56275_log.txt  56562_log.txt  56562_output.json  56658_log.txt  60062_log.txt  62806_log.txt  67450_output._eval_similarity_01.json  67450_output._eval_similarity_06.json  67450_output._eval_similarity_07.json  67450_output.json  69395_log.txt  71075_log.txt  77991_log.txt  77991_output._eval_similarity_06.json  77991_output.json  78429_log.txt  78429_output.json  79752_log.txt  (+22 more)
social_agents/: agent_builder.py  data_model.py  graph_tools.py  helper.py  objects.py  pyproject.toml  state.py  utils.py
(+797 files in other folders)
